--- a/1-EntradaSalida/EntradaSalida-3.html
+++ b/1-EntradaSalida/EntradaSalida-3.html
@@ -37,7 +37,7 @@
 
   <div class="col-6 col-s-9">
    	
-	<form id="FormIngreso" class=" animated bounceInLeft" class=" animated bounceInLeft">
+	<form id="elNombre" class=" animated bounceInLeft" class=" animated bounceInLeft">
 		<h1>Ingrese Su Nombre</h1>
 		<input type="text"  placeholder="Su nombre" id="elNombre">
 		  
